<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_light2"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backIm"
                android:layout_width="@dimen/back_btn_width"
                android:layout_height="@dimen/back_btn_height"
                android:padding="@dimen/back_btn_padding"
                android:src="@drawable/icon_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/register"
                style="@style/label_sub"
                android:textSize="@dimen/label_sub_20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="19dp"
                android:layout_marginRight="20dp"
                android:gravity="right"
                android:text="@string/step_2_2"
                android:textColor="@color/white"
                android:textSize="15dp" />


        </RelativeLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/layoutSc"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:id="@+id/alertTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/general_text_13"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <EditText
                    android:id="@+id/nicknameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/general_text_14_1"
                    android:imeOptions="actionDone"
                    android:maxLength="20"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textSize="18sp"
                    android:theme="@style/Theme.App.Base" />

                <Button
                    android:id="@+id/clearTextBtn"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/emailEt"
                    android:layout_marginTop="7dp"
                    android:background="@color/transparent"
                    android:text="x"
                    android:textColor="@color/grayfont"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/maleRBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:checked="true"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/femaleRBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/female" />

            </LinearLayout>

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_redius5_blue"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
